pagination with paging 3, menu and navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.amadydev.alkemymoviechallenge">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".AlkemyMovieChallengeApp"
@@ -13,10 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AmadyDev">
         <activity
-            android:name=".presentation.view.MovieDetailsActivity"
-            android:exported="true" />
-        <activity
-            android:name=".presentation.view.MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
