--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     //Paging 3
     implementation"androidx.paging:paging-runtime-ktx:3.1.0"
+    //interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+
 
 
     testImplementation 'junit:junit:4.13.2'
