--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         hilt_version = "2.49"
         navigationVersion = '2.7.6'
         agp_version = '7.4.2'
+        kotlin_version = '1.9.21'
     }
     repositories {
         google()
@@ -11,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$agp_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
@@ -20,6 +21,6 @@ buildscript {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
